[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Try_Again_UI.gd" type="Script" id=1]
[ext_resource path="res://assets/font/banana_4/Banana.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_size = 1
outline_color = Color( 0.490196, 0.490196, 0.490196, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0.188235, 0.188235, 0.188235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0.188235, 0.188235, 0.188235, 1 )
font_data = ExtResource( 2 )

[node name="Try_Again_UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 500.0
margin_bottom = 924.0
custom_constants/separation = 50
alignment = 1

[node name="LabelBestScore" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 500.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 1 )
text = "Best Score:
1323656"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TryAgainBtn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 500.0
margin_bottom = 529.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Try Again?"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 579.0
margin_right = 500.0
margin_bottom = 636.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "exit"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/TryAgainBtn" to="." method="_on_TryAgainBtn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
